# enum_reflection

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt  enum_reflection.h  main.cpp
